--- a/PC/3DSController.ini
+++ b/PC/3DSController.ini
@@ -1,17 +1,23 @@
-Default port is 8889, if you change this, you must change it in the 3DS's 3DSController.ini as well,
-
-Circle Pad, C Stick and Touch can be MOUSE, JOYSTICK1 or JOYSTICK2
-JOYSTICK1 uses X and Y. JOYSTICK2 uses Rx and Ry. These are 0, 1, 3 and 4 respectively, leaving 2 and 5 unused.
-
-Mouse Speed controls how fast the Circle Pad or Touch Screen moves the mouse. If set to 0 and using the Touch Screen, it will set to the absolute position, rather than moving relatively to last position,
-
-Buttons can be a letter for a keyboard key (like Q, W, E, R, T, or Y), a special keyboard key (like SPACE, CLICK, RIGHT CLICK, ENTER, BACKSPACE, SHIFT, TAB, LEFT, RIGHT, UP, DOWN, PAGE UP, PAGE DOWN, or WINDOWS), or a joypad button (JOY1, JOY2, JOY3, to JOY16).
-
-If you want to use JOY9 through JOY16 you need to reconfigure vJoy. Search for vJoyConf in your start menu and set buttons to 16.
-
-Alternatively, you can disable a key by binding it to NONE,
-
+﻿Default port is 8889, if you change this, you must change it in the 3DS's 3DSController.ini as well,
 Throttle controls the delay between checking for new packets (in milliseconds), a high number will have slightly more lag between pressing a button on the 3DS and receiving it on the PC, however will make the application use less CPU. In my experience, 20 is a reasonable throttling amount,
+Mouse Speed controls how fast the Circle Pad or Touch Screen moves the mouse. If set to 0 and using the Touch Screen, it will set to the absolute position, rather than moving relatively to last position,
+vJoy Device chooses which device to connect to. Set this to 2 in a second instance of 3DSController to use a second 3DS at the same time, perhaps for multiplayer.
+
+
+Circle Pad, C Stick and Touch can be MOUSE, JOYSTICK1, or JOYSTICK2. DUALJOY (Touch)
+JOYSTICK1 uses X and Y. JOYSTICK2 uses Rx and Ry. These are axes 0, 1, 3 and 4 respectively, leaving 2 and 5 unused.
+KEYS will enable Pad directions (eg. Pad Left, C Stick Right) to map to regular keys (no vJoy necessary).
+D Pad can be KEYS or POV. POV will automatically choose a continuous or 4 directional POV hat depending on what is set in your vJoy Config. KEYS will allow Left, Right and etc. to be buttons as previously.
+
+DUALJOY makes the touch screen two (or three with the third buttion pressing both buttions at the same time) buttions left* half and right* half respectively
+*the buttion do not take up excatactly half of the screen but more like a third allowing both sides of the touch screen to be pressed at the same time
+
+Buttons can be a letter for a keyboard key (like Q, W, E, R, T, or Y), a special keyboard key (like SPACE, CLICK, RIGHT CLICK, ENTER, BACKSPACE, SHIFT, TAB, LEFT, RIGHT, UP, DOWN, PAGE UP, PAGE DOWN, WINDOWS, ESCAPE, CONTROL or ALT), or a joypad button (JOY1, JOY2, JOY3, to JOY16).
+If you want to use JOY9 through JOY16 you need to reconfigure vJoy. Search for vJoy Config in your start menu and set buttons to 16.
+
+Alternatively, you can disable any key by binding it to NONE.
+
+
 
 Make sure to use a single space, not a tab for seperating settings,
 
@@ -19,24 +25,40 @@ Make sure to use a single space, not a tab for seperating settings,
 
 
 Port: 8889
-Throttle: 20
-Circle Pad: JOYSTICK1
-C Stick: JOYSTICK2
-Touch: MOUSE
-Mouse Speed: 0
+Throttle: 10
+Mouse Speed: 8
+vJoy Device: 1
 
-A: A
-B: B
-X: X
-Y: Y
-L: L
-R: R
-ZL: Q
-ZR: W
+Circle Pad: KEYS
+C Stick: MOUSE
+D Pad: KEYS
+Touch: DUALJOY
+
+A: a
+B: b
+X: x
+Y: y
+L: l
+R: r
+ZL: [
+ZR: ]
+Start: .
+Select: ,
+
 Left: LEFT
 Right: RIGHT
 Up: UP
 Down: DOWN
-Start: ENTER
-Select: BACKSPACE
-Tap: SPACE
+
+Touch Left: (
+Touch Right: )
+
+Pad Left: a
+Pad Right: d
+Pad Up: w
+Pad Down: s
+
+C Stick Left: 5
+C Stick Right: 6
+C Stick Up: 7
+C Stick Down: 8
