revert exit back to start+select

--- a/PC/3DSController.ini
+++ b/PC/3DSController.ini
@@ -16,13 +16,13 @@ L: JOY5
 R: JOY6 
 ZL: [ 
 ZR: ] 
-Start: . 
-Select: JOY7 
+Start: JOY7 
+Select: JOY8 
 
-Left: JOY8 
-Right: JOY9 
-Up: JOY10 
-Down: JOY11 
+Left: JOY9 
+Right: JOY10 
+Up: JOY11 
+Down: JOY12 
 
 Touch Left: ( 
 Touch Right: ) 
